# cargo-c

./: .gitignore  .travis.yml  Cargo.toml  README.md  codecov.yml  coverage.sh  grcov.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: deploy.yml  example-project-with-subdir.yml  example-project.yml  rust.yml
example-project/: Cargo.toml  README.md  build.rs  cbindgen.toml
example-project-with-subdir/: Cargo.toml  README.md  cbindgen.toml
example-project-with-subdir/assets/capi/include/: file.h
example-project-with-subdir/src/: capi.rs  lib.rs
example-project-with-subdir/tests/: capi.rs  rust.rs
example-project-with-subdir/usage-from-c/: Makefile  run_tests.c
example-project/shared/data/: example.txt
example-project/src/: capi.rs  lib.rs
example-project/tests/: capi.rs  rust.rs
example-project/usage-from-c/: Makefile  meson.build  run_tests.c
example-workspace/: Cargo.toml
example-workspace/api-a/: Cargo.toml
example-workspace/api-a/src/: lib.rs
example-workspace/api-b/: Cargo.toml
example-workspace/api-b/src/: lib.rs
example-workspace/api-c/: Cargo.toml
src/: build.rs  build_targets.rs  cbuild.rs  cinstall.rs  cli.rs  config.rs  install.rs  install_paths.rs  lib.rs  main.rs  pkg_config_gen.rs  static_libs.rs  target.rs
