[package]
name = "cargo-c"
version = "0.9.9+cargo-0.62"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "Helper program to build and install c-like libraries"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "http://github.com/lu-zero/cargo-c"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cargo", "cdylib"]

[[bin]]
name = "cargo-capi"
path = "src/bin/capi.rs"

[[bin]]
name = "cargo-cinstall"
path = "src/bin/cinstall.rs"

[[bin]]
name = "cargo-cbuild"
path = "src/bin/cbuild.rs"

[[bin]]
name = "cargo-ctest"
path = "src/bin/ctest.rs"

[dependencies]
cargo = "0.62"
cargo-util = "0.1"
semver = "1.0.3"
log = "0.4"
clap = { version="3.1", features=["color", "derive", "cargo"] }
regex = "1"
cbindgen = "0.23"
toml = "0.5"
serde = "1.0.123"
serde_derive = "1.0"
serde_json = "1.0.62"
anyhow = "1.0"
cc = "1.0"
glob = "0.3"
itertools = "0.10"

[features]
default = []
vendored-openssl = ["cargo/vendored-openssl"]
