[package]
name = "cargo-c"
version = "0.9.26+cargo-0.74.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "Helper program to build and install c-like libraries"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lu-zero/cargo-c"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cargo", "cdylib"]
rust-version = "1.69"

[[bin]]
name = "cargo-capi"
path = "src/bin/capi.rs"

[[bin]]
name = "cargo-cinstall"
path = "src/bin/cinstall.rs"

[[bin]]
name = "cargo-cbuild"
path = "src/bin/cbuild.rs"

[[bin]]
name = "cargo-ctest"
path = "src/bin/ctest.rs"

[dependencies]
cargo = "0.74.0"
cargo-util = "0.2"
semver = "1.0.3"
log = "0.4"
clap = { version="4.0.29", features=["color", "derive", "cargo"] }
regex = "1.5.6"
cbindgen = { version="0.26.0", default-features=false }
toml = "0.7"
serde = "1.0.123"
serde_derive = "1.0"
serde_json = "1.0.62"
anyhow = "1.0"
cc = "1.0"
glob = "0.3"
itertools = "0.11"

# workaround cargo
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
  "Win32_Security",
  "Win32_System_SystemServices"
]

[features]
default = []
vendored-openssl = ["cargo/vendored-openssl"]

[profile.release-strip]
inherits = "release"
strip = "symbols"
