[package]
name = "cargo-c"
version = "0.10.18+cargo-0.92.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "Helper program to build and install c-like libraries"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lu-zero/cargo-c"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cargo", "cdylib"]
rust-version = "1.89"

[[bin]]
name = "cargo-capi"
path = "src/bin/capi.rs"

[[bin]]
name = "cargo-cinstall"
path = "src/bin/cinstall.rs"

[[bin]]
name = "cargo-cbuild"
path = "src/bin/cbuild.rs"

[[bin]]
name = "cargo-ctest"
path = "src/bin/ctest.rs"

[dependencies]
cargo = "0.92.0"
cargo-util = "0.2"
semver = "1.0.3"
log = "0.4"
clap = { version = "4.5.18", features = ["color", "derive", "cargo", "string", "wrap_help"] }
regex = "1.5.6"
cbindgen = { version="0.29.0", default-features=false }
toml = "0.9"
serde = "1.0.123"
serde_derive = "1.0"
serde_json = "1.0.62"
anyhow = "1.0"
cc = "1.0"
glob = "0.3"
itertools = "0.14"
implib = "0.4.0"
object = { version = "0.38.0", default-features = false, features = ["std", "read_core", "pe"] }
cargo-platform = "0.3.1"

[features]
default = []
vendored-openssl = ["cargo/vendored-openssl"]

[profile.release-strip-nolto]
inherits = "release"
strip = "symbols"
opt-level = "s"
codegen-units = 1

[profile.release-strip-lto]
inherits = "release-strip-nolto"
lto = true

[profile.release-strip]
inherits = "release-strip-lto"

# To avoid #414
[workspace]
exclude = ["example-project", "example-workspace"]
